# sep-2023-drf

./: .env  .gitignore  Dockerfile  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
apps/auth/: urls.py  views.py
apps/auto_parks/: models.py  serializers.py  urls.py  views.py
apps/auto_parks/migrations/: 0001_initial.py  0002_autoparkmodel_user.py
apps/cars/: choices.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0002_carmodel_body_type_carmodel_engine.py  0003_carmodel_created_at_carmodel_updated_at.py  0004_remove_carmodel_body_type_remove_carmodel_engine.py  0005_carmodel_auto_park.py  0006_carmodel_body_type_alter_carmodel_brand_and_more.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0003_profilemodel_avatar.py  0004_alter_profilemodel_avatar.py  (+1 more)
backend/: manage.py
backend/apps/auth/: serializers.py  urls.py  (+1 more)
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/core/: permissions.py
backend/templates/: spam.html  test_email.html
cars/: models.py  serializers.py  views.py
cars/migrations/: 0001_initial.py
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/extra_conf/: rest_conf.py
core/dataclasses/: user_dataclass.py
core/exceptions/: jwt_exception.py
core/handlers/: error_handler.py
core/services/: email_service.py  jwt_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  router.js
templates/: base.html
(+50 files in other folders)
